deployments/service-b/service-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-deployment
  namespace: istio-meshlab
  labels:
    app: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: quarkus-istio-service:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
