deployments/service-b/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: istio-meshlab
  labels:
    app: service-b
spec:
  selector:
    app: service-b
  ports:
    - name: http
      port: 80
      targetPort: 8080
