deployments/service-b/service-b-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-b-destination
  namespace: istio-meshlab
  labels:
    app: service-b
spec:
  host: service-b
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
