deployments/service-b/service-b-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-b-mtls
  namespace: istio-meshlab
spec:
  host: service-b
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
