deployments/service-b/service-b-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-b-virtual-service
  namespace: istio-meshlab
  labels:
    app: service-b
spec:
  hosts:
    - "service-b.local"
  gateways:
    - service-b-gateway
  http:
    - route:
        - destination:
            host: service-b
            port:
              number: 80
